--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,15 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+
+  </head>
+
+  <body ng-app="starter">
+    <ion-nav-view>
+
+    </ion-nav-view>
+
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -21,11 +30,6 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-  </head>
-
-  <body ng-app="starter">
-    <ion-nav-view>
-
-    </ion-nav-view>
+    <script src="js/localstoragedb.min.js" type="text/javascript"></script>
   </body>
 </html>
