--- a/www/index.html
+++ b/www/index.html
@@ -12,14 +12,11 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
-
   </head>
 
-  <body ng-app="starter">
-    <ion-nav-view>
+  <body ng-app="smashedpotato">
 
-    </ion-nav-view>
-
+    <ion-nav-view> </ion-nav-view>
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -28,8 +25,12 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="scripts/jquery.min.js" type="text/javascript"></script>
+		<script src="scripts/jquery-ui.min.js" type="text/javascript"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/timer.js"></script>
     <script src="js/localstoragedb.min.js" type="text/javascript"></script>
+    <script src="jquery.js" type="text/javascript"></script>
   </body>
 </html>
